Functioning close button and fixed bugs
Close button now works to go back to superhero page.

Fixed extra space bug on landing page to so it doesn’t scroll.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html {
+  width:1024px;
+  height:768px;
+  overflow: hidden;
+}
+
 body {
 font-family: 'Open Sans', sans-serif;
 width:1024px;
